Apply style and refactor translation

--- a/src/translation/english.json
+++ b/src/translation/english.json
@@ -13,7 +13,6 @@
   },
 
   "home": {
-    "welcome": "Welcome",
     "myName": "My name is ",
     "intro": "I am a web & mobile developer specialized in front-end development using technologies like",
     "and": "and",
@@ -37,11 +36,7 @@
   },
 
   "experiences": {
-    "experiences": "Experiences",
-    "frontDev": "Front-end developer",
-    "expDilepix": "Developed and designed the multi-language web application for Dilepix. This application is designed to facilitate the transmission of various types of data, ranging from images to videos. Data is monitored through a dashboard, where users can perform various actions, including CRUD operations. Additionally, the application offers other functionalities, such as the ability to visualize analyses through customizable graphs.",
-    "fullStack": "Full-stack developer",
-    "expGZ": "Mobile application available on Android and iOS stores. I Developed and designed the mobile application for Génération Zhéros. This application offers an individual coaching that daily guides you towards your own sustainable development journey via different quiz and functionalities. I was also in charge of the development of the MongoDB database, the administration dashboard using Laravel | VueJS and the Wordpress website."
+    "experiences": "Experiences"
   },
 
   "contact": {
