Redesign Contact component

--- a/src/translation/english.json
+++ b/src/translation/english.json
@@ -38,7 +38,7 @@
   },
 
   "contact": {
-    "getInTouch": "Want to discuss? Please get in touch!",
+    "getInTouch": "Please get in touch!",
     "thanks": "Thank you for your visit!"
   }
 }
