--- a/src/translation/french.json
+++ b/src/translation/french.json
@@ -38,7 +38,7 @@
   },
 
   "contact": {
-    "getInTouch": "Envie de discuter ? N'hésitez pas à me contacter !",
+    "getInTouch": "N'hésitez pas à me contacter !",
     "thanks": "Merci pour votre visite !"
   }
 }
